--- a/_data/language.yml
+++ b/_data/language.yml
@@ -1,24 +1,24 @@
-info_website: "About This Site"
-archive: "Archive"
+info_website: "有關本網站"
+archive: "封存"
 blog_archive: "Blog Archive"
-blog: "Blog"
+blog: "部落格"
 comments_headline: "Dialogue &amp; Discussion"
-more: "More ›"
-more_articles: "More Articles"
-navigation_title: "Navigation"
-new_blog_entries: "New Blog Articles"
-next: "Next"
-next_posts: "Next Posts"
-previous: "Previous"
-previous_posts: "Previous Posts"
-read: "Read"
-read_more: "Read More&nbsp;›"
+more: "更多 ›"
+more_articles: "更多文章"
+navigation_title: "導覽"
+new_blog_entries: "新文章"
+next: "下一個"
+next_posts: "下一篇"
+previous: "前一個"
+previous_posts: "前一篇"
+read: "閱讀"
+read_more: "看更多 &nbsp;›"
 if_you_are_not_redirected_automatically: "If you are not redirected automatically,"
-click_here: "click here"
+click_here: "點這"
 next_post_in: "Next Post in"
 previous_post_in: "Previous Post in"
-breadcrumb_start: "Start"
-edit: "Edit"
+breadcrumb_start: "首頁"
+edit: "編輯"
 this_content_is_open_source: "This content is open source."
 help_improve_it: "Help improve it"
-enter_search_term: "Enter search term and hit enter"
+enter_search_term: "輸入搜尋關鍵字並按輸入鍵"
