--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,75 +1,84 @@
-- title: Start
+- title: 首頁
   url: "/"
   side: left
-
-- title: Getting Started
+  
+- title: 關於我們
   url: "/getting-started/"
   side: left
-
-- title: "Templates"
-  url: "/design/"
+- title: 出版品
+  url: "/getting-started/"
   side: left
-  dropdown:
-  - title: "Grid & Colors"
-    url: "/design/grid/"
-  - title: "Typography"
-    url: "/design/typography/typography/"
-  - title: "Page/Post"
-    url: "/design/page/"
-  - title: "Post-Left-Sidebar"
-    url: "/design/post-left-sidebar/"
-  - title: "Post-Right-Sidebar"
-    url: "/design/post-right-sidebar/"
-  - title: "Page Full-Width"
-    url: "/design/page-fullwidth/"
-  - title: "Blog-Page"
-    url: "/blog/"
-  - title: "Video"
-    url: "/design/video/"
-  - title: "Gallery"
-    url: "/design/gallery/"
-  - title: "Portfolio"
-    url: "/design/portfolio/"
-
-- title: "Header Styles"
-  url: "/headers/"
+- title: 關於讀經
+  url: "http://www.101superweb.com/web/tainanalpha"
   side: left
-  dropdown:
-  - title: "Header with Full-Width-Image"
-    url: "/design/header-full-width-image/"
-  - title: "Header with Image and Pattern"
-    url: "/design/header-image-pattern/"
-  - title: "Header with image and color"
-    url: "/design/header-image-color/"
-  - title: "Header Only With Logo"
-    url: "/design/header-logo-only/"
-  - title: "Header With Text"
-    url: "/design/header-with-text/"
-  - title: "No Header"
-    url: "/design/no-header/"
-  - title: "No Header but Image"
-    url: "/design/no-header-but-image/"
-
-- title: Documentation
-  url: "/documentation/"
+- title: 線上奉獻
+  url: "http://www.101superweb.com/web/tainanalpha"
   side: left
-  dropdown:
-  - title: "Changelog"
-    url: "/changelog/"
-  - title: "Roadmap"
-    url: "/roadmap/"
 
-- title: Blog
-  url: "/blog/"
-  side: left
-  dropdown:
-  - title: "Blog Archive"
-    url: "/blog/archive/"
+# - title: "Templates"
+#   url: "/design/"
+#   side: left
+#   dropdown:
+#   - title: "Grid & Colors"
+#     url: "/design/grid/"
+#   - title: "Typography"
+#     url: "/design/typography/typography/"
+#   - title: "Page/Post"
+#     url: "/design/page/"
+#   - title: "Post-Left-Sidebar"
+#     url: "/design/post-left-sidebar/"
+#   - title: "Post-Right-Sidebar"
+#     url: "/design/post-right-sidebar/"
+#   - title: "Page Full-Width"
+#     url: "/design/page-fullwidth/"
+#   - title: "Blog-Page"
+#     url: "/blog/"
+#   - title: "Video"
+#     url: "/design/video/"
+#   - title: "Gallery"
+#     url: "/design/gallery/"
+#   - title: "Portfolio"
+#     url: "/design/portfolio/"
 
-- title: "Search"
+# - title: "Header Styles"
+#   url: "/headers/"
+#   side: left
+#   dropdown:
+#   - title: "Header with Full-Width-Image"
+#     url: "/design/header-full-width-image/"
+#   - title: "Header with Image and Pattern"
+#     url: "/design/header-image-pattern/"
+#   - title: "Header with image and color"
+#     url: "/design/header-image-color/"
+#   - title: "Header Only With Logo"
+#     url: "/design/header-logo-only/"
+#   - title: "Header With Text"
+#     url: "/design/header-with-text/"
+#   - title: "No Header"
+#     url: "/design/no-header/"
+#   - title: "No Header but Image"
+#     url: "/design/no-header-but-image/"
+
+# - title: Documentation
+#   url: "/documentation/"
+#   side: left
+#   dropdown:
+#   - title: "Changelog"
+#     url: "/changelog/"
+#   - title: "Roadmap"
+#     url: "/roadmap/"
+
+# - title: Blog
+#   url: "/blog/"
+#   side: left
+#   dropdown:
+#   - title: "Blog Archive"
+#     url: "/blog/archive/"
+
+- title: "搜尋本站"
   url: "/search/"
   side: right
 
-- title: "Contact"
+- title: "聯繫我們"
   url: "/contact/"
   side: right
