增加fb, youtube 連結

--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,32 +1,27 @@
-- name: GitHub
-  url: http://github.com/phlow
-  class: icon-github
-  title: Code und mehr...
+- name: Facebook
+  url: https://www.facebook.com/alphachildrenscripturerecitingassociation/
+  class: icon-facebook
+  title: "阿爾法粉絲專頁"
 
 - name: YouTube
-  url: http://www.youtube.com/PhlowMedia
+  url: https://www.youtube.com/channel/UCHetixTXWgic895R0tPfa2Q/playlists?view_as=subscriber
   class: icon-youtube
-  title: "Videos, Video-Anleitungen und Filme von Phlow auf YouTube"
+  title: "阿爾法影片頻道"
 
-- name: Twitter
-  url: http://twitter.com/phlow
-  class: icon-twitter
-  title: "Immer das Neuste von Phlow gibt es auf Twitter"
+#   - name: GitHub
+#   url: http://github.com/alpha
+#   class: icon-github
+#   title: github
 
-- name: Mixcloud
-  url: http://www.mixcloud.com/phlow/
-  class: icon-cloud
-  title: "Mixe, was sonst?"
+# - name: Line
+#   url: https://plus.google.com/u/0/+Phlow
+#   class: icon-googleplus
+#   title: Line@ 生活圈
 
-- name: Phlow YouTube Google+
-  url: https://plus.google.com/u/0/+Phlow
-  class: icon-googleplus
-  title: "YouTube Google+"
-
-# - name: Facebook
-#   url: http://www.facebook.com/
-#   class: icon-facebook
-#   title: ""
+# - name: Twitter
+#   url: http://twitter.com/phlow
+#   class: icon-twitter
+#   title: "Immer das Neuste von Phlow gibt es auf Twitter"
 
 # - name: Soundcloud
 #   url: http://soundcloud.com/
