訂出 footer 結構、增大字體

--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,16 +1,20 @@
-- menu_name: "Services"
+- menu_name: "聯絡我們"
 
-- name: "Contact"
-  url: "/contact/"
-  title: "Contact"
-
-- name: "RSS"
-  url: "/feed.xml"
-  title: "Subscribe to RSS Feed"
-
-- name: "Atom"
-  url: "/atom.xml"
-  title: "Subscribe to Atom Feed"
+- name: "台南市"
+  url: ""
+  title: ""
+- name: "06"
+  url: ""
+  title: ""
+- name: "alpha6309@gmail.com"
+  url: "mailto:alpha6309@gmail.com"
+  title: ""
+- name: "Line@生活圈"
+  url: "mailto:alpha6309@gmail.com"
+  title: ""
+- name: "Facebook 粉絲專頁"
+  url: "mailto:alpha6309@gmail.com"
+  title: ""
 
 - name: "sitemap.xml"
   url: "/sitemap.xml"
