--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,21 +1,7 @@
-- menu_name: "Dankeschön"
+- menu_name: "相關網站連結"
 
-- name: "Icons by Daniel Bruce"
-  url: "http://entypo.com/"
+- name: "慕真在家教育協會"
+  url: "http://www.mujen.org.tw/"
   class: "network-entypo"
-  title: "Icons by Daniel Bruce"
+  title: "慕真在家教育協會"
 
-- name: "Built on Foundation"
-  url: "http://foundation.zurb.com/"
-  class: "services-newsletter"
-  title: "Built on Foundation"
-
-- name: "Images by Unsplash"
-  url: "http://unsplash.com/"
-  class: "rss-link"
-  title: "Images by Unsplash"
-
-- name: "Using Backstretch by Scott Robbin"
-  url: "http://srobbin.com/jquery-plugins/backstretch/"
-  class: "sitemap-link"
-  title: "Using Backstretch by Scott Robbin"
